--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-02.html
@@ -763,7 +763,7 @@
 <ol class="exercise-list">
 <li><i>I rotto latë nu oron.</i></li>
 <li><i>Elda séra i opelessë.</i></li>
-<li><i>Tië tulyanë i atan i nóressë.</i></li>
+<li><i>Tië tulyanë i atan i nórenna.</i></li>
 <li><i>I men menë oialë.</i></li>
 <li><i>I naucor váner i rottollo.</i></li>
 <li><i>I hesto tolunë ara raxarya.</i></li>
@@ -787,7 +787,7 @@
 <li>The river lies beside your country.</li>
 <li>A street leads me from the tower.</li>
 <li>The tomb sits on a hill.</li>
-<li>A dwarf is sitting down in his house.</li>
+<li>A dwarf is sitting down in your house.</li>
 <li>The tower is standing by a lake.</li>
 <li>The king traveled to Middle-earth.</li>
 </ol>
