--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
@@ -1353,7 +1353,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 
 <p><a id="c5-5-3-1"></a><b>5.5.3.1 Negative imperatives with <i>vá</i>:</b> As discussed in <a href="eldamo-intro-quenya-03.html#c3-4-2">Chapter 3, Section §3.4.2</a>, the basic Quenya marker for commands (the imperative) is <i>á</i>, as in <i>á matë</i> “eat!” or “do eat!”. The negative imperative marker is <i>áva</i> “don’t”, as in <i>áva matë</i> “don’t eat!”. The curt negative imperative form <i>avá</i> “don’t!” (stressed on the final syllable: “ah-VAHH”) can be used for urgent commands to stop something.</p>
 
-<p>The particle <i>vá</i> can also be used in <u>response</u> to commands, in which case it indicates refusal, as in <i>vá</i> “[I] won’t”, or more fully <i>ván(ye)</i> “I won’t” or <i>válmë</i> “we won’t”. The latter will be exclusive <i>-lmë</i> if the person addressed is commanding a distinctgroup that is refusing them, but might be <i>válvë</i> if the person addressed is part of a debate inside a group making a collective decision. This peculiar use of the same element for both “don’t” and “won’t” has to do with the base meaning of its root. The primitive element BA indicates denial from the perspective of what the speaker wants. Thus, when addressed to another as a command, it indicates forbiddance. But when given in response to a command it indicates refusal.</p>
+<p>The particle <i>vá</i> can also be used in <u>response</u> to commands, in which case it indicates refusal, as in <i>vá</i> “[I] won’t”, or more fully <i>ván(ye)</i> “I won’t” or <i>válmë</i> “we won’t”. The latter will be exclusive <i>-lmë</i> if the person addressed is commanding a distinct group that is refusing them, but might be <i>válvë</i> if the person addressed is part of a debate inside a group making a collective decision. This peculiar use of the same element for both “don’t” and “won’t” has to do with the base meaning of its root. The primitive element BA indicates denial from the perspective of what the speaker wants. Thus, when addressed to another as a command, it indicates forbiddance. But when given in response to a command it indicates refusal.</p>
 
 <p>As such, using <i>vá</i> with 2nd or 3rd person pronouns indicates forbiddance: <i>válye</i> “you are not to do”, <i>vás(së)</i> “he mustn’t”. But such formations are rarely used; the less ambiguous verbs <i>váquet-</i> “to forbid” and <i>apta-</i> “to refuse” are used more often instead.</p>
 
@@ -1384,9 +1384,9 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 
 <p>Elements of both systems appear in <i>The Lord of the Rings</i> itself, notably <i>la</i>-negation with the Sindarin word <i>alfirin</i> “immortal” as a flower name (LotR/875; Let/402) but <i>u</i>-negation in Quenya <i>únótima</i> “numberless, (lit.) uncountable” (LotR/377; PE17/62) and the Sindarin phrase <i>ú-chebin</i> “I have kept no ..., (lit.) not-keep-I” (LotR/1061; PE17/117).</p>
 
-<p>In notes written around 1959, Tolkien decided to entirely abandon <i>la</i>-negation and use only <i>u</i>-negation for the negation of facts (PE17/143). His motives seemed to be the desire to use <i>lá</i> for “beyond” (PE19/65, 90). After rejecting <i>la</i>-negation he worked to come up with a new meaning for the flower name <i>alfirin</i> (PE17/100, 146), though he did not appear to find something satisfactory. Other changes in this period support the shift to <i>u</i>-negation, notably the name <i>Alamanyar</i> for “elves not of Aman” became <i>Úmanyar</i> (MR/163), which is the form Christopher Tolkien used in <i>The Silmarillion</i> as published (S/53).</p>
+<p>In notes written around 1959, Tolkien decided to entirely abandon <i>la</i>-negation and use only <i>u</i>-negation for the negation of facts (PE17/143). His motives seemed to be the desire to use <i>lá</i> for “beyond” (PE19/65, 90). After rejecting <i>la</i>-negation he worked to come up with a new meaning for the flower name <i>alfirin</i> (PE17/100, 146), though he did not appear to find anything satisfactory. Other changes in this period support the shift to <i>u</i>-negation, notably the name <i>Alamanyar</i> for “elves not of Aman” became <i>Úmanyar</i> (MR/163), which is the form Christopher Tolkien used in <i>The Silmarillion</i> as published (S/53).</p>
 
-<p>According to Patrick Wynne, Tolkien stuck with <i>u</i>-negation for the following decade, but in <i>Late Notes on Verb Structure</i> probably written in the summer of 1969 he reversed himself again, restoring <i>la</i>-negation and abandoning <i>u</i>-negation. He seems to have been at least partly motivated by the meaning of S. <i>alfirin</i> (PE22/153), but he was also dissatisfied with the similarity of <i>u</i>-negation to negative formations in some real-world European languages (PE22/160). He wrote some extensive notes on the restored system of <i>la</i>-negation (PE22/153-154; 160-161), and the <i>u</i>-prefix was relegated back to a limited role as a prefix for primarily “bad/difficult” negative meanings.</p>
+<p>According to Patrick Wynne, Tolkien stuck with <i>u</i>-negation for the following decade, but in <i>Late Notes on Verb Structure</i> probably written in the summer of 1969 he reversed himself again, restoring <i>la</i>-negation and abandoning <i>u</i>-negation. He seems to have been at least partly motivated by the meaning of S. <i>alfirin</i> (PE22/153), but he was also dissatisfied with the similarity of <i>u</i>-negation to negative formations in some real-world European languages (PE22/160). He wrote some extensive notes on the restored system of <i>la</i>-negation (PE22/153-154; 160-161), and the <i>u</i>-prefix was relegated back to a limited role as a prefix with “bad/difficult” negative meanings.</p>
 
 <p>This restoration of <i>la</i>-negation seems to have been short lived. There is at least one later note in which Tolkien wrote “Negation back to <i>ú</i>; <i>lá</i> can be beyond” (date unknown, VT44/4). In his composition of the so-called Ambidexters Sentence probably written in August of 1969 he switched from <i>la</i>-negation back to <i>u</i>-negation. On the other hand, in a letter to Amy Ronald date November 1969, he defined S. <i>alfirin</i> as “immortal”, so even at the end of his life Tolkien’s commitment to either system appears to have been weak.</p>
 
@@ -1398,7 +1398,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 
 <p>As such, there was (and is) as much variation on how the Neo-Quenya community formed negatives as there was in Tolkien’s own writings.</p>
 
-<p>My own preferences for <i>u</i>-negation were solidified by an experience I had at a Tolkien language conference in 2019. At the conference we played a Quenya guessing game, using <i>ná</i> for “yes” and <i>lá</i> for “no”. Many of the participants (myself included) had considerable difficulty distinguishing the two, and the game was punctuated with people saying <i>ná, ná, ná</i> or <i>lá, lá, lá</i> to emphasize that the answer was, in fact, “yes” or “no”. It made realize that a language where the words for yes and no are easily confused is quite impractical, and I’ve preferred <i>ui</i> for “no” since then as a result.</p>
+<p>My own preferences for <i>u</i>-negation were solidified by an experience I had at a Tolkien language conference in 2019. At the conference we played a Quenya guessing game, using <i>ná</i> for “yes” and <i>lá</i> for “no”. Many of the participants (myself included) had considerable difficulty distinguishing the two, and the game was punctuated with people saying <i>ná, ná, ná</i> or <i>lá, lá, lá</i> to emphasize that the answer was, in fact, “yes” or “no”. It made me realize that a language where the words for yes and no are easily confused is quite impractical, and I have preferred <i>ui</i> for “no” ever since then.</p>
 
 <p><a id="c5-5-4-3"></a><b>5.5.4.3 My preferred system of Quenya negation:</b> My preferred system of Quenya negation is something of a compromise system. For basic verbal negation I prefer the negative verb <i>ui-</i> (<i>ui, úne, uie, úva</i>). However, as a prefix I think <i>ú-</i> often has a “bad” or “opposite” connotation, and I retain <i>al(a)-</i> and <i>la-</i> as neutral negative prefixes indicating mere absense rather than opposition: <i>lacarë</i> “inaction” vs. <i>úcarë</i> “misdeed”, <i>alasaila</i> “unwise” (the mere absense of wisdom) vs. <i>úvanima</i> “ugly” (the opposite of beautiful).</p>
 
@@ -1568,7 +1568,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 
 <h1><a id="c5-6"></a>5.6 Guided Reading: Nieninquë</h1>
 
-<p>Tolkien composed a version of the Nieninquë poem in the 1950s describing the escapades of the maiden Niéle; this was an updated version of a poem he wrote around 1930. The 1950s version was published in <i>Parma Eldalamberon #16</i> (PE16/96), and that version will be our focus in this section. As usual, we need to introduce a bit of vocabulary before translating the poem, some of which we’ve seen before:</p>
+<p>Tolkien first composed the Nieninquë poem around 1930 describing the escapades of the maiden Niéle, and he wrote an updated version of the poem in the 1950s. The 1950s version was published in <i>Parma Eldalamberon #16</i> (PE16/96), and that version will be our focus in this section. As usual, we need to introduce a bit of vocabulary before translating the poem, some of which we’ve seen before:</p>
 
 <ul class="vocab-list">
 <li><b>cendë</b> <i>n.</i> “point”</li>
@@ -1579,7 +1579,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <li><b>nië</b> <i>n.</i> “tear”</li>
 <li><b>nieninquë</b> <i>n.</i> “snowdrop” ²</li>
 <li><b>sana</b> <i>adj.</i> “that [previously mentioned]” ³</li>
-<li><b>ta</b> <i>pron.</i> “that, there”</li>
+<li><b>ta</b> <i>pron.</i> “that”</li>
 <li><b>tanna</b> <i>adv.</i> “thither” ⁴</li>
 </ul>
 
@@ -1587,7 +1587,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <li>Note ¹: The suffixes <i>-incë</i> and (rarer) <i>-iccë</i> are diminutive suffixes, used to indicate littleness but also affection, as in: “little Niéle”.</li>
 <li>Note ²: The word <i>nieninquë</i> “snowdrop” is a combination of <i>nië</i> “tear” and <i>ninquë</i> “white; chill”, so it is more literally “white/chill tear”.</li>
 <li>Note ³: The adjective pronoun <i>sana</i> “that” refers to a thing previously mentioned, as opposed to <i>tana</i> “that” which refers to “that thing over there”.</li>
-<li>Note ⁴: The adverb <i>tanna</i> “thither” [to there] is the allative from of <i>ta</i> “that, there” = <i>ta</i> + <i>-nna</i>. This sort of “pronoun with a noun case” is a common formation in Quenya, and we will see another (<i>yan</i> = relative <i>ya</i> + dative <i>-n</i>) in the poem below.</li>
+<li>Note ⁴: The adverb <i>tanna</i> “thither” [to there] is the allative from of <i>ta</i> “that” = <i>ta</i> + <i>-nna</i>. This sort of “pronoun with a noun case” is a common formation in Quenya, and we will see another (<i>yan</i> = relative <i>ya</i> + dative <i>-n</i>) in the poem below.</li>
 </ul>
 
 <p>The poem makes liberal use of poetic compounds and abnormal word order, making its interpretation tricky. The first four lines of the poem are:</p>
@@ -1618,7 +1618,7 @@ that maiden snowdrop-(adj.)
 
 <blockquote>
 <i>ya-n i wilya-r anta-r mique-lis</i><br/>
-who-(dative) the air-(pl.) give-(pl.) kiss-sweet
+what-(dative) the air-(pl.) give-(pl.) kiss-sweet
 </blockquote>
 
 <p>The heart of this stanza of the poem is its second line. The subject of the entire phrase is <i>Niëliccilis</i>, which is <i>Niéle</i> with the diminutive suffix <i>-iccë</i> (<i>-icci</i>) and the extra suffix <i>-lis</i>, apparently a reduction of <i>lissë</i> “sweet”; see <i>miquelis</i> below. The verb is <i>lendë</i> “went”, the past tense of <i>lelya-</i> “to travel, go”. The word <i>tanna</i> “thither” is the destination, so the second line means “sweet little Niéle went thither”. See <a href="eldamo-intro-quenya-06.html">Chapter 6</a> for the reason why <i>Niéle</i> shortens its vowel in <i>Nieliccilis</i> (hint: it’s because the following syllable became heavy).</p>
@@ -1897,7 +1897,7 @@ to whom the air gives kisses.
 <li><b>nyarro</b> <i>n.</i> “rat”</li>
 <li><b>rá</b> <i>prep.</i> “on behalf of”</li>
 <li><b>sana</b> <i>adj.</i> “that [previously mentioned]” ³</li>
-<li><b>ta</b> <i>pron.</i> “that, there”</li>
+<li><b>ta</b> <i>pron.</i> “that”</li>
 <li><b>tanna</b> <i>adv.</i> “thither” ⁴</li>
 <li><b>tamma</b> <i>n.</i> “tool”</li>
 </ul>
@@ -1906,7 +1906,7 @@ to whom the air gives kisses.
 <li>Note ¹: The suffixes <i>-incë</i> and (more rarely) <i>-iccë</i> are diminutive suffixes, used to indicate littleness but also affection, as in: “little Niéle”.</li>
 <li>Note ²: The word <i>nieninquë</i> “snowdrop” is a combination of <i>nië</i> “tear” and <i>ninquë</i> “white; chill”, so it is more literally “white/chill tear”.</li>
 <li>Note ³: The adjective pronoun <i>sana</i> “that” refers to a thing previously mentioned, as opposed to <i>tana</i> “that” which refers to “that thing over there”.</li>
-<li>Note ⁴: The adverb <i>tanna</i> “thither” [to there] is the allative from of <i>ta</i> “that, there” = <i>ta</i> + <i>-nna</i>.</li>
+<li>Note ⁴: The adverb <i>tanna</i> “thither” [to there] is the allative from of <i>ta</i> “that” = <i>ta</i> + <i>-nna</i>.</li>
 </ul>
 
 <h1><a id="c5-7-2"></a>5.7.2 Grammar Summary</h1>
