--- a/src/main/webapp/intro-quenya/index.html
+++ b/src/main/webapp/intro-quenya/index.html
@@ -31,6 +31,7 @@
 <li><b><a href="eldamo-intro-quenya-08.html">Chapter 8</a></b></li>
 <li><b><a href="eldamo-intro-quenya-09.html">Chapter 9</a></b></li>
 <li><b><a href="eldamo-intro-quenya-10.html">Chapter 10</a></b></li>
+<li><b><a href="eldamo-intro-quenya-11.html">Chapter 11</a></b></li>
 </ul>
 
 <center><h1><u>Memrise Vocabulary Courses</u></h1></center>
@@ -48,6 +49,7 @@
 <li><b><a href="https://app.memrise.com/course/6357574/eldamo-intro-quenya-ch-8/">Vocabulary for Chapter 8</a></b></li>
 <li><b><a href="https://app.memrise.com/course/6358068/eldamo-intro-quenya-ch-9/">Vocabulary for Chapter 9</a></b></li>
 <li><b><a href="https://app.memrise.com/course/6361771/eldamo-intro-quenya-ch-10/">Vocabulary for Chapter 10</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6366933/eldamo-intro-quenya-ch-11/">Vocabulary for Chapter 11</a></b></li>
 </ul>
 
 </body>
